# python-project-52

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: task_manager_actions.yml
task_manager/: asgi.py  forms.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/label/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/label/migrations/: 0001_initial.py
task_manager/status/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py
task_manager/task/: filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/task/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_author_alter_task_executor_and_more.py
task_manager/task_manager/: settings.py
task_manager/templates/: 404.html  layout.html  users.html
task_manager/templates/labels/: delete_label.html  labels.html  new_label.html  update_label.html
task_manager/templates/statuses/: delete_status.html  statuses.html
task_manager/templates/tasks/: update_task.html  view_task.html
task_manager/templates/users/: new_user.html  users.html
task_manager/user/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/user/fixtures/: users.json
task_manager/user/migrations/: 0001_initial.py
templates/: footer.html  head.html  index.html  login.html  navigation.html  users.html
templates/labels/: delete_label.html  labels.html  new_label.html  update_label.html
templates/statuses/: delete_status.html  new_status.html  statuses.html  update_status.html
templates/tasks/: delete_task.html  new_task.html  tasks.html  update_task.html  view_task.html
templates/users/: delete_user.html  new_user.html  update_user.html  users.html
