[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager"
authors = ["artem"]
readme = "README.md"
packages = [{ include = "task_manager" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.17"
python-dotenv = "1.0.1"
dj-database-url = "2.3.0"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.10"
django-filter = "23.5"
rollbar = "0.16.3"
coverage = "7.6.9"
django-bootstrap-v5 = "1.0.11"
asgiref = "3.8.1"
beautifulsoup4 = "4.12.3"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
flake8 = "6.1.0"
idna = "3.10"
mccabe = "0.7.0"
pycodestyle = "2.11.1"
pyflakes = "3.1.0"
requests = "2.32.3"
setuptools = "75.6.0"
six = "1.17.0"
soupsieve = "2.6"
sqlparse = "0.5.3"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
